# qa_guru_hm_test_project_14

./: .gitignore  conftest.py  pyproject.toml  requirements.txt
module/: __init.py__.py
pages/: login_page.py  main_page.py
tests/: test_buttons.py  test_footer.py  test_images.py  test_login.py  test_main_page.py  test_services.py
